Add dependencies: numpy and opencv.

--- a/test_plone60.cfg
+++ b/test_plone60.cfg
@@ -10,3 +10,13 @@ update-versions-file = test_plone60.cfg
 [versions]
 createcoverage = 1.5
 watchdog = 2.1.6
+
+# Added by buildout at 2021-10-23 22:28:40.324354
+
+# Required by:
+# experimental.focalpoints==1.0a1
+numpy = 1.21.3
+
+# Required by:
+# experimental.focalpoints==1.0a1
+opencv-python-headless = 4.5.4.58
